@@ -8,14 +8,24 @@
 # Otherwise, we add this path to PATH.
 import os
 import site
-import sys
 
 # The directory should be installed under site-packages.
-for maybe in site.getsitepackages():
-	pywin32_system32=os.path.join(maybe,"pywin32_system32")
-	if os.path.isdir(pywin32_system32):
-		if hasattr(os, "add_dll_directory"):
-			os.add_dll_directory(pywin32_system32)
-		else:
-			os.environ["PATH"] = pywin32_system32 + ";" + os.environ["PATH"]
 
+dirname = os.path.dirname
+# This is to get the "...\Lib\site-packages" directory
+# out of this file name: "...\Lib\site-packages\win32\Lib\pywin32_bootstrap.py".
+# It needs to be searched when installed in virtual environments.
+level3_up_dir = dirname(dirname(dirname(__file__)))
+
+site_packages_dirs = getattr(site, "getsitepackages", lambda: [])()
+if level3_up_dir not in site_packages_dirs:
+    site_packages_dirs.insert(0, level3_up_dir)
+
+for site_packages_dir in site_packages_dirs:
+    pywin32_system32 = os.path.join(site_packages_dir, "pywin32_system32")
+    if os.path.isdir(pywin32_system32):
+        if hasattr(os, "add_dll_directory"):
+            os.add_dll_directory(pywin32_system32)
+        else:
+            os.environ["PATH"] = pywin32_system32 + os.pathsep + os.environ["PATH"]
+        break
